# M

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  experiment_note.md  feature_request.md
.github/workflows/: ci.yaml  lint.yaml  release.yaml
configs/: global.yaml
data/: README.md
scripts/: aggregate_evidence.py  evaluate.py  export_results.py  extract_evidence.py  mine_candidates.py  normalize_evidence.py  parse_corpus.py  run_demo.py  validate_evidence.py
src/eum/: __init__.py  cli.py
src/eum/aggregator/: __init__.py  base.py  deduplicate.py  evidence_table.py  merge_units.py  summary_stats.py
src/eum/baselines/: __init__.py
src/eum/candidate_miner/: __init__.py  base.py  heuristic_miner.py  hybrid_miner.py  keyword_miner.py  triggers.py
src/eum/core/: __init__.py  datamodels.py  exceptions.py  interfaces.py  registry.py  utils.py
src/eum/evaluator/: base.py  error_analysis.py  field_metrics.py  normalization_metrics.py  unit_metrics.py
src/eum/extractor/: __init__.py  base.py  constraints.py  json_extractor.py  postprocess.py  two_stage_extractor.py
src/eum/io/: jsonl.py  paths.py  readers.py  writers.py
src/eum/normalizer/: __init__.py  base.py  brain_region.py  dictionary.py  method_normalizer.py  species_normalizer.py
src/eum/parser/: base.py  (+7 more)
tests/: __init__.py  test_aggregator.py  test_candidate_miner.py  test_datamodels.py  test_evaluator.py  test_extractor.py  test_normalizer.py  test_parser.py  test_validator.py
(+25 files in other folders)
