[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evidence-unit-mining"
version = "0.1.0"
description = "Research monorepo skeleton for structured evidence unit mining."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "TODO"}]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
